--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="Your AI Receptionist That Never Sleeps - 24/7 AI Customer Service" />
     <meta property="og:description" content="Transform your business with AI-powered customer service that handles calls, messages, and appointments 24/7." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/ai-receptionist-hero.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@aireceptionist" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/ai-receptionist-hero.png" />
 
     <!-- Favicon -->
     <link rel="icon" href="/lovable-uploads/264c58f1-184a-454e-849b-724be174d02c.png" type="image/png">
